# PemGim

./: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  add_audio.patch  add_audio_calls.py  add_audio_system.py  add_mixer_init.py  add_sfx.py  adjust_volume_and_block.py  build.ninja  cmake_install.cmake  convert_to_wav.sh  fix_audio_quality.py  fix_frequency.py  fix_music_transitions.py  fix_paths.py  fix_sample_rate.py  lower_music_volume.py  reconvert_music.sh  sejarah-rpg  switch_to_wav.py
src/: BadarIntroScene.cpp  BadarIntroScene.hpp  CharacterSelectScene.cpp  CharacterSelectScene.hpp  DialogueBox.cpp  DialogueBox.hpp  DuelScene.cpp  DuelScene.cpp.orig  DuelScene.cpp.rej  DuelScene.hpp  EncyclopediaScene.cpp  EncyclopediaScene.hpp  EndingScene.cpp  EndingScene.hpp  Game.cpp  Game.hpp  MenuScene.cpp  MenuScene.hpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  StoryScene.cpp  StoryScene.cpp.rej  StoryScene.hpp  TextRenderer.cpp  TextRenderer.hpp  main.cpp
